apps/staging/squirrel/deployment-staging-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squirrel
  namespace: campfire
spec:
  template:
    spec:
      containers:
        - name: squirrel
